fixed scroll on mobile + small fixes

--- a/frontend/src/css/normal.css
+++ b/frontend/src/css/normal.css
@@ -32,7 +32,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  overflow: hidden; /* Чтобы фоновые круги не делали скролл */
 }
 
 /* Фоновые круги (Blobs) */
@@ -87,12 +86,33 @@ body::before {
 
 /* --- HEADER --- */
 .app-header {
-  padding: 1.5rem var(--inner-gutter);
+  padding: 1.25rem var(--inner-gutter);
   display: flex;
   align-items: center;
   justify-content: space-between;
   flex-shrink: 0;
   z-index: 10;
+}
+
+.app-header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 80px;
+  background: rgb(255, 255, 255);
+  padding: 0 var(--inner-gutter);
+}
+
+@media (min-width: 480px) {
+  .app-header {
+    position: absolute;
+  }
+}
+
+.app-header-title {
+  font-size: 1.25rem; font-weight: 800; color: var(--c-purple-500);
+  display: flex; align-items: center; gap: 8px;
 }
 
 .app-header-btn {
@@ -119,7 +139,7 @@ body::before {
   flex: 1;
   overflow-y: auto;
   padding-bottom: 120px;
-  padding-top: 10px;
+  padding-top: 96px;
   -webkit-overflow-scrolling: touch;
 }
 
@@ -402,4 +422,16 @@ body::before {
   column-gap: 16px;
   row-gap: 5rem;
   padding: 4rem var(--inner-gutter) 105px;
+}
+
+@media (max-width: 480px) {
+  .app-body {
+    padding-bottom: 0px;
+  }
+  .app-footer {
+    position: fixed;
+  }
+  .product-grid {
+    padding: 4rem var(--inner-gutter) 75px;
+  }
 }
